:bug: Fixes settings not showing after login

--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -170,6 +170,15 @@
     }
 
     h1 {
+        @media only screen and (min-width: 200px) {
+            margin: 1rem;
+        }
+        @media only screen and (min-width: 1000px) {
+            margin: 0;
+        }
+
+        text-align: center;
+
         margin: 0;
         padding: 0;
     }
