--- a/src/styles/TeacherPage/HomeworkSection-TeacherPage.scss
+++ b/src/styles/TeacherPage/HomeworkSection-TeacherPage.scss
@@ -3,8 +3,7 @@
     flex-direction: column;
 
     .homework-container {
-        display: flex;
-        flex-direction: column;
+        display: table;
 
         height: 90vh;
         width: 100%;
